# GameDataGen

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
.forgejo/workflows/: README.md  desktop-build.yml  release.yml  test.yml
docs/flet/: README.md  async-usage.md  components.md
examples/: advanced-world-generation.ts  complete-example.ts  events-and-random-content.ts  icons-integration.ts  image-generation.ts  quality-control-workflow.ts  simple-example.ts
src/: GameDataGen.ts  index.ts
src/connectors/: RelationshipDefinitions.ts
src/core/: ContextManager.ts  EditingSystem.ts  GenerationEngine.ts  KnowledgeGraph.ts  LevelingSystem.ts  SchemaRegistry.ts  SpatialSystem.ts
src/gamedatagen/: __init__.py  api.py  cli.py  config.py  visualization.py
src/gamedatagen/core/: __init__.py  game_data_gen.py  generation_engine.py  knowledge_graph.py  leveling_system.py  schema_registry.py  spatial_system.py
src/gamedatagen/desktop/: __init__.py  app.py
src/gamedatagen/desktop/components/: __init__.py  entity_browser.py  loot_table_editor.py  voice_preview.py
src/gamedatagen/desktop/views/: __init__.py  browse_view.py  content_view.py  settings_view.py  stats_view.py  voice_view.py
src/gamedatagen/desktop/views/editors/: __init__.py  enemy_editor.py  item_editor.py  npc_editor.py  quest_editor.py  zone_editor.py
src/gamedatagen/exporters/: __init__.py  bevy.py  json_exporter.py
src/gamedatagen/utils/: __init__.py  image_gen.py  prompt_builder.py  quality_checker.py  voice_gen.py
src/schemas/examples/: enhanced-mmorpg-schemas.ts  events-and-random-schemas.ts  mmorpg-schemas.ts
src/utils/: IconifyService.ts  ImageGenerationService.ts  ImageQualityChecker.ts  PromptBuilder.ts  llm.ts
src/workflows/: GenerationTools.ts  GenerationWorkflow.ts
